  Gradle 'api' dependency introduced to framework modules, dependencies cleaned up
  Gradle 'api' dependency introduced to javafx, swing and plugin modules, dependencies cleaned up
  Gradle build refactoring, demo project stuff removed from root build file
  EntityService now handles forwarded requests
  Version bug fixed, could not handle non-snapshot versions
  Version 0.11.0 released
0.11.1
  Entities domain model now provided by the EntityConnection and EntityConnectionProvider, relevant classes now implement Serializable with non-client related fields transient
  EntityConnectionProvider.CLIENT_DOMAIN_CLASS string configuration value added, for domain model loading
  Annotation based domain modelling scrapped
  Entity.OrderBy added, string based order by clauses outlawed
  OrderBy.getSortOrder() added
  EntitySelectCondition.getOrderByClause() replaced with getOrderBy(), LocalEntityConnection now handles creating the actual order by clause
  Entity.getKeyGeneratorType() and getProperties() added
  Entities.Validator no longer keeps a domain model reference
  EntityService, error handling improved
  HttpEntityConnection now initializes Entities and EntityConditions in constructor
  HttpEntityConnectionProvider and RemoteEntityConnectionProvider.initializeEntities() now uses getConnection()
  NumberDocumentFilter now suppresses NullPointerException during setCaret() :(
  UiUtil now uses separate JFileChooser instances for open and save actions
  Copyright update mistake fixed
  EntityTablePanel, UiUtil.ExceptionDialog, replaced new Control() with Controls.control()
  SQLiteDatabase added, very preliminary
  EntityTablePanel.getCopyCellControl() and getCopyTableWithHeaderControl() now protected instead of private
  User.password is now a character array instead of String
  User.readObject() is now backwards compatible, as in, can read User instances from previous versions
  Entities.orderBy() now static